fix: Word wrap in chat message - Issue #62

--- a/src/presentation/pages/chat/Chat.css
+++ b/src/presentation/pages/chat/Chat.css
@@ -150,6 +150,8 @@
 
 .page-chat .message {
     width: 60%;
+    word-wrap: normal !important;
+    overflow-wrap: normal !important;
 }
 
 .page-chat .transaction-messages {
@@ -181,7 +183,7 @@
     padding: 0;
     color: var(--primary);
     font-size: 16px;
-    word-break: break-all;
+    word-break: normal;
 }
 
 .page-chat .transaction button {
